--- a/frontend/src/pages/customer/CustomerDash.css
+++ b/frontend/src/pages/customer/CustomerDash.css
@@ -4,7 +4,9 @@
   align-items: center;
   flex-direction: column;
 }
-
+.restaurant-closed{
+   opacity:"0.5"
+}
 .customer-dash-container {
   display: flex;
   justify-content: center;
