--- a/frontend/src/pages/restaurant/restaurant.css
+++ b/frontend/src/pages/restaurant/restaurant.css
@@ -1,88 +1,111 @@
 .restaurant-container {
-    width: 93%;
-    margin: 0 auto;
-  }
-  
-  .restaurant-section {
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: row;
-    gap: 2vw;
-  }
-  
-  .restaurant-img{
-    width: 200px;
-    height: 170px;
-    border-radius: 20px;
-  }
-  
-  .restaurant-header {
-    color: #333;
-    margin-top: 10px;
-  }
-  
-  .restaurant-information {
-    list-style: none;
-    padding: 0;
-    margin-bottom: 20px;
-  }
-  
-  .restaurant-information li {
-    margin-bottom: 10px;
-    font-size: 16px;
-    color: #666;
-  }
-  
-  .menu-container {
-    margin-top: 20px;
-  }
-  
-  .menu-category {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .menu-category h2 {
-    padding: 10px;
-    margin: 0;
-    color: #333;
-  }
-  
-  .category-dishes {
-    width: 400px;
-    height: 100px;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    list-style: none;
-    padding: 0;
-    
-  }
-  
-  .dish-container {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-  }
-  
-  .dish-container img {
-    width: 80px;
-    height: 80px;
-    margin-right: 15px;
-    border-radius: 5px;
-    object-fit: cover;
-  }
-  
-  .dish-container h3 {
-    margin: 0;
-    color: #333;
-    flex-grow: 1;
-  }
-  
-  .dish-container p {
-    margin: 0;
-    color: #666;
-    font-size: 14px;
-  }
-  
-  
+  width: 93%;
+  margin: 0 auto;
+}
+
+.restaurant-section {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 2vw;
+}
+
+.restaurant-img {
+  width: 200px;
+  height: 170px;
+  border-radius: 20px;
+}
+
+.restaurant-header {
+  color: #333;
+  margin-top: 10px;
+  font-size: 50px;
+}
+
+.restaurant-information {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.restaurant-information li {
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: #0f0e0e;
+}
+
+.menu-container-restaurant{
+  margin-top: 20px;
+}
+
+
+
+.menu-category {
+  list-style: none;
+  padding: 0;
+}
+
+.menu-category h2 {
+  padding: 10px;
+  margin: 0;
+  color: #333;
+}
+
+.category-dishes {
+  width: 400px;
+  height: 100px;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  padding: 0;
+}
+
+.dish-container {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+.dish-container img {
+  width: 80px;
+  height: 80px;
+  margin-right: 15px;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.dish-container h3 {
+  margin: 0;
+  color: #333;
+  flex-grow: 1;
+}
+
+.dish-container p {
+  margin: 0;
+  color: #666;
+  font-size: 14px;
+}
+
+.navbutton-order {
+  position: fixed;
+  font-size: 20px;
+  width: 500px;
+  right: 50vw;
+  bottom: 1vh;
+  z-index: 1000;
+  padding: 10px 20px;
+  background-color: #e8a1ff;
+  color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.restaurant-details-for-page{
+display: flex;
+flex-direction: row;
+gap: 20px;
+color: #000000;
+}
+
